fix z-index on sticky header

--- a/packages/app/src/app/journal/journal.component.scss
+++ b/packages/app/src/app/journal/journal.component.scss
@@ -18,6 +18,7 @@
   border-right-style: solid;
   position: sticky;
   padding: 10px;
+  background: white;
 }
 
 .journal-header h1 {
@@ -78,7 +79,7 @@
   position: sticky;
   top: 0;
   background: white;
-  z-index: 1;
+  z-index: 2;
 }
 
 .sidebar-header h1 {
